--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
+
 <!DOCTYPE html>
 <title>Help - zaman.old</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='css/basic.css' rel='stylesheet'/>
 
 <div class="nav">
-Last update: 25:31 2019/12/08 UTC+7<br>
+Last update: 9/19/2019, 12:34:30 PM<br>
 <a href="faq.html">Situs apa ini?</a><br><br>
-
-
 <div class="list">
-
 <li>
   <span>1</span>
-  <span><a href="data/BYH. Al-Hikam/">BYH. Al-Hikam</a></span>
-  <span>2019/11/05 - 95.95Mb / 68 items (27.28 hours)</span>
+  <span><a href="data/BYH. Al-hikam/">BYH. Al-hikam</a></span>
+  <span>2019/09/19 - 95.95Mb / 66 items (27.28 hours)</span>
 </li>
-
-
-
-</div>
-
+<li>
+  <span>2</span>
+  <span><a href="data/KHB. Sirah Nabawiyah/">KHB. Sirah Nabawiyah</a></span>
+  <span>2019/09/19 - 201.01Mb / 28 items (56.04 hours)</span>
+</li>
+<li>
+  <span>3</span>
+  <span><a href="data/KHB. Sirah Sahabat/">KHB. Sirah Sahabat</a></span>
+  <span>2019/09/19 - 348.23Mb / 47 items (96.98 hours)</span>
+</li></div>
