--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 <link href='css/basic.css' rel='stylesheet'/>
 
 <div class="nav">
-Last update: 9/19/2019, 12:34:30 PM<br>
+Last update: 9/19/2019, 5:02:00 PM<br>
 <a href="faq.html">Situs apa ini?</a><br><br>
 <div class="list">
 <li>
   <span>1</span>
-  <span><a href="data/BYH. Al-hikam/">BYH. Al-hikam</a></span>
-  <span>2019/09/19 - 95.95Mb / 66 items (27.28 hours)</span>
+  <span><a href="data/BYH. Al-Hikam/">BYH. Al-Hikam</a></span>
+  <span>2019/09/19 / 27:16:48 95.95Mb</span>
 </li>
 <li>
   <span>2</span>
   <span><a href="data/KHB. Sirah Nabawiyah/">KHB. Sirah Nabawiyah</a></span>
-  <span>2019/09/19 - 201.01Mb / 28 items (56.04 hours)</span>
+  <span>2019/09/19 / 56:02:24 201.01Mb</span>
 </li>
 <li>
   <span>3</span>
   <span><a href="data/KHB. Sirah Sahabat/">KHB. Sirah Sahabat</a></span>
-  <span>2019/09/19 - 348.23Mb / 47 items (96.98 hours)</span>
+  <span>2019/09/19 / 96:58:48 348.23Mb</span>
 </li></div>
