--- a/data/KHB. Sirah Nabawiyah/index.html
+++ b/data/KHB. Sirah Nabawiyah/index.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
-<title>zaman.old</title>
+<title>Pengumpul Ilmu / KHB. Sirah Nabawiyah</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='../../css/basic.css' rel='stylesheet'/>
 <div class="nav">
-Last update: 9/19/2019, 4:18:11 PM<br>
+Last update: 10/1/2019, 5:28:33 PM<br>
 <a href="../../faq.html">Situs apa ini?</a>
 <br><br>
 <a href="../../">Home</a> / KHB. Sirah Nabawiyah</div>
@@ -14,14 +14,14 @@ Last update: 9/19/2019, 4:18:11 PM<br>
   <span>Source: KHB Youtube Channel</span>
   <span>Total duration: 56.04 hours (28 items)</span>
   <span>Total size: 191.70Mb</span>
-  <span>Filetype: Audio/opus 8k</span>
+  <span>Filetype: Audio/opus 8kb/s</span>
   <span class="dl-all"><a href="https://www.youtube.com/playlist?list=PLlK0gGuioshBgZZf8VOC4IonQtFxPsifW" target="blank">Source</a></span>
   <span class="dl-all"><a href="https://drive.google.com/drive/folders/1QD8eozxZeshP90KHRyulveHR0kMIEKJh" target="blank">Download All</a></span>
 </div>
 <div class="list">
 <li>
   <span>1</span>
-  <span> Pengantar Sirah Nabawiyah</span>
+  <span>Pengantar Sirah Nabawiyah</span>
   <span>9/18/2019</span>
   <span>02:10:04</span>
   <span>7.57Mb</span><br>
@@ -30,7 +30,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>2</span>
-  <span> Sejarah Terbentuknya Kota Mekkah</span>
+  <span>Sejarah Terbentuknya Kota Mekkah</span>
   <span>9/18/2019</span>
   <span>02:00:44</span>
   <span>6.97Mb</span><br>
@@ -39,7 +39,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>3</span>
-  <span> Masuknya Agama Yahudi dan Nasrani ke Jazirah Arab</span>
+  <span>Masuknya Agama Yahudi dan Nasrani ke Jazirah Arab</span>
   <span>9/18/2019</span>
   <span>02:03:50</span>
   <span>6.96Mb</span><br>
@@ -48,7 +48,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>4</span>
-  <span> Kelahiran Nabi SAW</span>
+  <span>Kelahiran Nabi SAW</span>
   <span>9/18/2019</span>
   <span>01:42:33</span>
   <span>5.67Mb</span><br>
@@ -57,7 +57,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>5</span>
-  <span> Fase Sebelum Kenabian dan Prosesi Penobatan Kenabian</span>
+  <span>Fase Sebelum Kenabian dan Prosesi Penobatan Kenabian</span>
   <span>9/18/2019</span>
   <span>02:32:01</span>
   <span>8.77Mb</span><br>
@@ -66,7 +66,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>6</span>
-  <span> Dakwah Sembunyi-Sembunyi dan Terang-Terangan</span>
+  <span>Dakwah Sembunyi-Sembunyi dan Terang-Terangan</span>
   <span>9/18/2019</span>
   <span>01:48:54</span>
   <span>6.28Mb</span><br>
@@ -75,7 +75,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>7</span>
-  <span> Kisah Ketadatangan Nabi SAW Ke Madinah</span>
+  <span>Kisah Ketadatangan Nabi SAW Ke Madinah</span>
   <span>9/18/2019</span>
   <span>02:18:02</span>
   <span>8.05Mb</span><br>
@@ -84,7 +84,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>8</span>
-  <span> Perang Badar 1</span>
+  <span>Perang Badar 1</span>
   <span>9/18/2019</span>
   <span>01:59:27</span>
   <span>6.96Mb</span><br>
@@ -93,7 +93,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>9</span>
-  <span> Perang Badar 2</span>
+  <span>Perang Badar 2</span>
   <span>9/18/2019</span>
   <span>02:00:18</span>
   <span>6.81Mb</span><br>
@@ -102,7 +102,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>10</span>
-  <span> Perang Uhud</span>
+  <span>Perang Uhud</span>
   <span>9/18/2019</span>
   <span>01:42:05</span>
   <span>5.85Mb</span><br>
@@ -111,7 +111,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>11</span>
-  <span> Perang Hamrad Asad</span>
+  <span>Perang Hamrad Asad</span>
   <span>9/18/2019</span>
   <span>02:16:10</span>
   <span>7.59Mb</span><br>
@@ -120,7 +120,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>12</span>
-  <span> Penyerangan Beberapa Suku Arab yang Ada Di Sekitar Kota Madinah</span>
+  <span>Penyerangan Beberapa Suku Arab yang Ada Di Sekitar Kota Madinah</span>
   <span>9/18/2019</span>
   <span>01:49:36</span>
   <span>6.32Mb</span><br>
@@ -129,7 +129,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>13</span>
-  <span> Perang Khandaq</span>
+  <span>Perang Khandaq</span>
   <span>9/18/2019</span>
   <span>03:11:02</span>
   <span>10.77Mb</span><br>
@@ -138,7 +138,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>14</span>
-  <span> Upaya Nabi SAW Menghukum Suku-suku Perang Ahzab</span>
+  <span>Upaya Nabi SAW Menghukum Suku-suku Perang Ahzab</span>
   <span>9/18/2019</span>
   <span>01:19:30</span>
   <span>4.57Mb</span><br>
@@ -147,7 +147,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>15</span>
-  <span> Ghazwah Bani Mustaliq</span>
+  <span>Ghazwah Bani Mustaliq</span>
   <span>9/18/2019</span>
   <span>02:47:51</span>
   <span>9.38Mb</span><br>
@@ -156,7 +156,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>16</span>
-  <span> Kesepakatan Hudaibiyyah</span>
+  <span>Kesepakatan Hudaibiyyah</span>
   <span>9/18/2019</span>
   <span>02:14:07</span>
   <span>7.47Mb</span><br>
@@ -165,7 +165,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>17</span>
-  <span> Perang Khaibar</span>
+  <span>Perang Khaibar</span>
   <span>9/18/2019</span>
   <span>02:47:04</span>
   <span>9.07Mb</span><br>
@@ -174,7 +174,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>18</span>
-  <span> Kejadian-Kejadian Setelah Perang Khaibar</span>
+  <span>Kejadian-Kejadian Setelah Perang Khaibar</span>
   <span>9/18/2019</span>
   <span>01:09:15</span>
   <span>3.86Mb</span><br>
@@ -183,7 +183,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>19</span>
-  <span> Surat Nabi SAW Kepada Raja-raja Dunia</span>
+  <span>Surat Nabi SAW Kepada Raja-raja Dunia</span>
   <span>9/18/2019</span>
   <span>01:20:53</span>
   <span>4.55Mb</span><br>
@@ -192,7 +192,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>20</span>
-  <span> Pasukan Syariah yang Diutus Oleh Nabi SAW</span>
+  <span>Pasukan Syariah yang Diutus Oleh Nabi SAW</span>
   <span>9/18/2019</span>
   <span>02:13:30</span>
   <span>7.43Mb</span><br>
@@ -201,7 +201,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>21</span>
-  <span> Pembebasan Kota Makkah 1</span>
+  <span>Pembebasan Kota Makkah 1</span>
   <span>9/18/2019</span>
   <span>02:42:25</span>
   <span>9.16Mb</span><br>
@@ -210,7 +210,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>22</span>
-  <span> Pembebasan Kota Makkah 2</span>
+  <span>Pembebasan Kota Makkah 2</span>
   <span>9/18/2019</span>
   <span>01:18:43</span>
   <span>4.47Mb</span><br>
@@ -219,7 +219,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>23</span>
-  <span> Perang Hunain</span>
+  <span>Perang Hunain</span>
   <span>9/18/2019</span>
   <span>01:39:40</span>
   <span>5.68Mb</span><br>
@@ -228,7 +228,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>24</span>
-  <span> Perang Tabuk 1</span>
+  <span>Perang Tabuk 1</span>
   <span>9/18/2019</span>
   <span>02:10:50</span>
   <span>7.44Mb</span><br>
@@ -237,7 +237,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>25</span>
-  <span> Perang Tabuk 2</span>
+  <span>Perang Tabuk 2</span>
   <span>9/18/2019</span>
   <span>01:50:08</span>
   <span>6.20Mb</span><br>
@@ -246,7 +246,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>26</span>
-  <span> Perang Tabuk 3</span>
+  <span>Perang Tabuk 3</span>
   <span>9/18/2019</span>
   <span>01:10:21</span>
   <span>4.00Mb</span><br>
@@ -255,7 +255,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>27</span>
-  <span> Imbas Peperangan-Peperangan Nabi SAW</span>
+  <span>Imbas Peperangan-Peperangan Nabi SAW</span>
   <span>9/18/2019</span>
   <span>02:00:05</span>
   <span>7.84Mb</span><br>
@@ -264,7 +264,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>28</span>
-  <span> Wafatnya Nabi SAW</span>
+  <span>Wafatnya Nabi SAW</span>
   <span>9/18/2019</span>
   <span>01:43:14</span>
   <span>6.01Mb</span><br>
