--- a/faq.html
+++ b/faq.html
@@ -1,11 +1,11 @@
 
 <!DOCTYPE html>
-<title>Faq - kajian.zaman.old</title>
+<title>Faq - Pengumpul Ilmu</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='css/basic.css' rel='stylesheet'/>
 
 <div class="nav">
-Last update: 9/19/2019, 3:33:54 PM<br>
+Last update: 10/1/2019, 5:23:55 PM<br>
 <a href="index.html">Home</a><br>
 
 <pre>
