--- a/data/BYH. Al-Hikam/index.html
+++ b/data/BYH. Al-Hikam/index.html
@@ -1,27 +1,27 @@
 
 <!DOCTYPE html>
-<title>zaman.old</title>
+<title>Pengumpul Ilmu / BYH. Al-Hikam</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='../../css/basic.css' rel='stylesheet'/>
 <div class="nav">
-Last update: 9/19/2019, 4:18:11 PM<br>
+Last update: 10/1/2019, 5:28:33 PM<br>
 <a href="../../faq.html">Situs apa ini?</a>
 <br><br>
-<a href="../../">Home</a> / BYH. Al-hikam</div>
+<a href="../../">Home</a> / BYH. Al-Hikam</div>
 <div class="info">
   <span>Title: Kajian Syarah Kitab Al-Hikam</span>
   <span>Ustaz: Buya Yahya</span>
   <span>Source: Al-Bahjah TV</span>
   <span>Total duration: 27.28 hours (66 items)</span>
   <span>Total size: 91.51Mb</span>
-  <span>Filetype: Audio/opus 8k</span>
+  <span>Filetype: Audio/opus 8kb/s</span>
   <span class="dl-all"><a href="https://www.youtube.com/playlist?list=PLZlkOj3-mAkD8WfxMydcTXHiagq5IV-G9" target="blank">Source</a></span>
   <span class="dl-all"><a href="https://drive.google.com/drive/folders/1-ELEIlePwqMhvdCLkJV0ofNy8kqa3Evt" target="blank">Download All</a></span>
 </div>
 <div class="list">
 <li>
   <span>1</span>
-  <span> Bersandar pada Amal Tanda Kurang Berharap pada Allah</span>
+  <span>Bersandar pada Amal Tanda Kurang Berharap pada Allah</span>
   <span>9/18/2019</span>
   <span>00:31:46</span>
   <span>1.67Mb</span><br>
@@ -30,7 +30,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>2</span>
-  <span> Keinginan Untuk Tajriid</span>
+  <span>Keinginan Untuk Tajriid</span>
   <span>9/18/2019</span>
   <span>00:39:33</span>
   <span>1.97Mb</span><br>
@@ -39,7 +39,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>3</span>
-  <span> Semangat Usahamu tidak bisa Merubah Takdir</span>
+  <span>Semangat Usahamu tidak bisa Merubah Takdir</span>
   <span>9/18/2019</span>
   <span>00:32:43</span>
   <span>1.83Mb</span><br>
@@ -48,7 +48,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>4</span>
-  <span> Istirahatkan Dirimu dari Mencari Dunia</span>
+  <span>Istirahatkan Dirimu dari Mencari Dunia</span>
   <span>9/18/2019</span>
   <span>00:39:10</span>
   <span>2.15Mb</span><br>
@@ -57,7 +57,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>5</span>
-  <span> Perintah Allah Untuk Berusaha</span>
+  <span>Perintah Allah Untuk Berusaha</span>
   <span>9/18/2019</span>
   <span>00:34:06</span>
   <span>1.85Mb</span><br>
@@ -66,7 +66,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>6</span>
-  <span> Keterlambatan Pengabulan Doa Oleh Allah</span>
+  <span>Keterlambatan Pengabulan Doa Oleh Allah</span>
   <span>9/18/2019</span>
   <span>00:23:22</span>
   <span>1.25Mb</span><br>
@@ -75,7 +75,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>7</span>
-  <span> Allah Tidak Akan Ingkar Janji</span>
+  <span>Allah Tidak Akan Ingkar Janji</span>
   <span>9/18/2019</span>
   <span>00:22:30</span>
   <span>1.22Mb</span><br>
@@ -84,7 +84,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>8</span>
-  <span> Mengenal Allah dengan Jalan Ma rifat</span>
+  <span>Mengenal Allah dengan Jalan Ma rifat</span>
   <span>9/18/2019</span>
   <span>00:17:42</span>
   <span>1.01Mb</span><br>
@@ -93,7 +93,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>9</span>
-  <span> Amal Merupakan Buah dari Apa Yang Ada di Hati</span>
+  <span>Amal Merupakan Buah dari Apa Yang Ada di Hati</span>
   <span>9/18/2019</span>
   <span>00:15:12</span>
   <span>0.84Mb</span><br>
@@ -102,7 +102,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>10</span>
-  <span> Ruh dari Sebuah Amal</span>
+  <span>Ruh dari Sebuah Amal</span>
   <span>9/18/2019</span>
   <span>00:34:18</span>
   <span>1.82Mb</span><br>
@@ -111,7 +111,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>11</span>
-  <span> Menata Hati Sebelum Berjuang dalam Masyarakat</span>
+  <span>Menata Hati Sebelum Berjuang dalam Masyarakat</span>
   <span>9/18/2019</span>
   <span>00:27:20</span>
   <span>1.52Mb</span><br>
@@ -120,7 +120,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>12</span>
-  <span> Tafakurkan Hati Untuk Mencapai Ma rifat</span>
+  <span>Tafakurkan Hati Untuk Mencapai Ma rifat</span>
   <span>9/18/2019</span>
   <span>00:20:57</span>
   <span>1.16Mb</span><br>
@@ -129,7 +129,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>13</span>
-  <span> Hati Gelap Karena Nafsu Dunia</span>
+  <span>Hati Gelap Karena Nafsu Dunia</span>
   <span>9/18/2019</span>
   <span>00:17:44</span>
   <span>1.03Mb</span><br>
@@ -138,7 +138,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>14</span>
-  <span> Allah Merupakan Sumber Penerang Alam Semesta</span>
+  <span>Allah Merupakan Sumber Penerang Alam Semesta</span>
   <span>9/18/2019</span>
   <span>00:22:19</span>
   <span>1.21Mb</span><br>
@@ -147,7 +147,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>15</span>
-  <span> Hijab Yang Menghalangi Manusia dari Allah</span>
+  <span>Hijab Yang Menghalangi Manusia dari Allah</span>
   <span>9/18/2019</span>
   <span>00:18:56</span>
   <span>1.04Mb</span><br>
@@ -156,7 +156,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>16</span>
-  <span> Tak Ada Yang Mampu Menutup Keberadaan Allah</span>
+  <span>Tak Ada Yang Mampu Menutup Keberadaan Allah</span>
   <span>9/18/2019</span>
   <span>00:30:27</span>
   <span>1.73Mb</span><br>
@@ -165,7 +165,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>17</span>
-  <span> Penyakit Menunda-nunda Ibadah</span>
+  <span>Penyakit Menunda-nunda Ibadah</span>
   <span>9/18/2019</span>
   <span>00:25:49</span>
   <span>1.49Mb</span><br>
@@ -174,7 +174,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>18</span>
-  <span> Jangan Meminta Pekerjaan Lain Karena Nafsu</span>
+  <span>Jangan Meminta Pekerjaan Lain Karena Nafsu</span>
   <span>9/18/2019</span>
   <span>00:16:37</span>
   <span>0.96Mb</span><br>
@@ -183,7 +183,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>19</span>
-  <span> Perhitungan Amal di Setiap Hembus Nafas Manusia</span>
+  <span>Perhitungan Amal di Setiap Hembus Nafas Manusia</span>
   <span>9/18/2019</span>
   <span>00:12:59</span>
   <span>0.72Mb</span><br>
@@ -192,7 +192,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>20</span>
-  <span> Jangan Tunda Kebaikan Akhirat karena Dunia</span>
+  <span>Jangan Tunda Kebaikan Akhirat karena Dunia</span>
   <span>9/18/2019</span>
   <span>00:26:59</span>
   <span>1.48Mb</span><br>
@@ -201,7 +201,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>21</span>
-  <span> Ujian Memenuhi Kehidupan Dunia</span>
+  <span>Ujian Memenuhi Kehidupan Dunia</span>
   <span>9/18/2019</span>
   <span>00:24:22</span>
   <span>1.40Mb</span><br>
@@ -210,7 +210,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>22</span>
-  <span> BerDoa Sebelum Berusaha</span>
+  <span>BerDoa Sebelum Berusaha</span>
   <span>9/18/2019</span>
   <span>00:21:08</span>
   <span>1.22Mb</span><br>
@@ -219,7 +219,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>23</span>
-  <span> Jalan Allah Merupakan Jalan Kesuksesan</span>
+  <span>Jalan Allah Merupakan Jalan Kesuksesan</span>
   <span>9/18/2019</span>
   <span>00:22:26</span>
   <span>1.31Mb</span><br>
@@ -228,7 +228,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>24</span>
-  <span> Akhir Hidup Manusia Akan Seperti Kehidupannya</span>
+  <span>Akhir Hidup Manusia Akan Seperti Kehidupannya</span>
   <span>9/18/2019</span>
   <span>00:17:23</span>
   <span>1.00Mb</span><br>
@@ -237,7 +237,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>25</span>
-  <span> Dzohir Adalah Cerminan Bathin</span>
+  <span>Dzohir Adalah Cerminan Bathin</span>
   <span>9/18/2019</span>
   <span>00:20:24</span>
   <span>1.17Mb</span><br>
@@ -246,7 +246,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>26</span>
-  <span> Anjuran Berinfak Untuk Orang Kaya</span>
+  <span>Anjuran Berinfak Untuk Orang Kaya</span>
   <span>9/18/2019</span>
   <span>00:18:29</span>
   <span>1.05Mb</span><br>
@@ -255,7 +255,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>27</span>
-  <span> Penutup Mata Manusia dari Melihat Allah</span>
+  <span>Penutup Mata Manusia dari Melihat Allah</span>
   <span>9/18/2019</span>
   <span>00:32:51</span>
   <span>1.89Mb</span><br>
@@ -264,7 +264,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>28</span>
-  <span> Melatih Kepekaan Rasa Kemanusiaan</span>
+  <span>Melatih Kepekaan Rasa Kemanusiaan</span>
   <span>9/18/2019</span>
   <span>00:27:36</span>
   <span>1.53Mb</span><br>
@@ -273,7 +273,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>29</span>
-  <span> Hawa Nafsu Asal Kemaksiatan</span>
+  <span>Hawa Nafsu Asal Kemaksiatan</span>
   <span>9/18/2019</span>
   <span>00:39:05</span>
   <span>2.24Mb</span><br>
@@ -282,7 +282,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>30</span>
-  <span> Menemukan Allah dengan Mata Hati</span>
+  <span>Menemukan Allah dengan Mata Hati</span>
   <span>9/18/2019</span>
   <span>00:29:15</span>
   <span>1.66Mb</span><br>
@@ -291,7 +291,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>31</span>
-  <span> Jangan Minta Tolong Pada Selain Allah</span>
+  <span>Jangan Minta Tolong Pada Selain Allah</span>
   <span>9/18/2019</span>
   <span>00:24:47</span>
   <span>1.39Mb</span><br>
@@ -300,7 +300,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>32</span>
-  <span> Allah Yang Memberi Cobaan dan Keinginan</span>
+  <span>Allah Yang Memberi Cobaan dan Keinginan</span>
   <span>9/18/2019</span>
   <span>00:22:42</span>
   <span>1.30Mb</span><br>
@@ -309,7 +309,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>33</span>
-  <span> Husnudzon Kepada Allah</span>
+  <span>Husnudzon Kepada Allah</span>
   <span>9/18/2019</span>
   <span>00:22:27</span>
   <span>1.29Mb</span><br>
@@ -318,7 +318,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>34</span>
-  <span> Yang Akan Selalu Menemani</span>
+  <span>Yang Akan Selalu Menemani</span>
   <span>9/18/2019</span>
   <span>00:22:10</span>
   <span>1.25Mb</span><br>
@@ -327,7 +327,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>35</span>
-  <span> Kemana Kamu Berhijrah</span>
+  <span>Kemana Kamu Berhijrah</span>
   <span>9/18/2019</span>
   <span>00:33:05</span>
   <span>1.91Mb</span><br>
@@ -336,7 +336,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>36</span>
-  <span> Pilih Siapa Bertemanmu</span>
+  <span>Pilih Siapa Bertemanmu</span>
   <span>9/18/2019</span>
   <span>00:26:26</span>
   <span>1.46Mb</span><br>
@@ -345,7 +345,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>37</span>
-  <span> Berhati-hatilah Dalam Berteman</span>
+  <span>Berhati-hatilah Dalam Berteman</span>
   <span>9/18/2019</span>
   <span>00:20:57</span>
   <span>1.21Mb</span><br>
@@ -354,7 +354,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>38</span>
-  <span> Keistimewaan Amal Orang Zuhud</span>
+  <span>Keistimewaan Amal Orang Zuhud</span>
   <span>9/18/2019</span>
   <span>00:25:04</span>
   <span>1.44Mb</span><br>
@@ -363,7 +363,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>39</span>
-  <span> 3 Tingkatan dalam Beramal</span>
+  <span>3 Tingkatan dalam Beramal</span>
   <span>9/18/2019</span>
   <span>00:27:08</span>
   <span>1.56Mb</span><br>
@@ -372,7 +372,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>40</span>
-  <span> Jangan Tinggalkan Dzikir</span>
+  <span>Jangan Tinggalkan Dzikir</span>
   <span>9/18/2019</span>
   <span>00:16:08</span>
   <span>0.94Mb</span><br>
@@ -381,7 +381,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>41</span>
-  <span> Jangan Berprasangka Buruk</span>
+  <span>Jangan Berprasangka Buruk</span>
   <span>9/18/2019</span>
   <span>00:15:15</span>
   <span>0.87Mb</span><br>
@@ -390,7 +390,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>42</span>
-  <span> Karunia Allah SWT</span>
+  <span>Karunia Allah SWT</span>
   <span>9/18/2019</span>
   <span>00:24:01</span>
   <span>1.36Mb</span><br>
@@ -399,7 +399,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>43</span>
-  <span> Amal Yang Paling Tinggi</span>
+  <span>Amal Yang Paling Tinggi</span>
   <span>9/18/2019</span>
   <span>00:23:03</span>
   <span>1.29Mb</span><br>
@@ -408,7 +408,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>44</span>
-  <span> Himbauan Untuk Berinfaq dan Sedekah</span>
+  <span>Himbauan Untuk Berinfaq dan Sedekah</span>
   <span>9/18/2019</span>
   <span>00:18:28</span>
   <span>1.05Mb</span><br>
@@ -417,7 +417,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>45</span>
-  <span> Ujub dan Kesombongan</span>
+  <span>Ujub dan Kesombongan</span>
   <span>9/18/2019</span>
   <span>00:23:52</span>
   <span>1.34Mb</span><br>
@@ -426,7 +426,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>46</span>
-  <span> Orang Yang Berjuang Menuju Allah SWT</span>
+  <span>Orang Yang Berjuang Menuju Allah SWT</span>
   <span>9/18/2019</span>
   <span>00:21:04</span>
   <span>1.18Mb</span><br>
@@ -435,7 +435,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>47</span>
-  <span> Kehinaan Berawal dari Kerakusan</span>
+  <span>Kehinaan Berawal dari Kerakusan</span>
   <span>9/18/2019</span>
   <span>00:31:08</span>
   <span>1.73Mb</span><br>
@@ -444,7 +444,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>48</span>
-  <span> Jangan Ikuti Wahn (ketidakpastian)</span>
+  <span>Jangan Ikuti Wahn (ketidakpastian)</span>
   <span>9/18/2019</span>
   <span>00:27:28</span>
   <span>1.54Mb</span><br>
@@ -453,7 +453,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>49</span>
-  <span> Bergantung Hanya kepada Allah SWT</span>
+  <span>Bergantung Hanya kepada Allah SWT</span>
   <span>9/18/2019</span>
   <span>00:25:12</span>
   <span>1.41Mb</span><br>
@@ -462,7 +462,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>50</span>
-  <span> Allah SWT Memberikan Cobaan pada Manusia</span>
+  <span>Allah SWT Memberikan Cobaan pada Manusia</span>
   <span>9/18/2019</span>
   <span>00:18:21</span>
   <span>1.02Mb</span><br>
@@ -471,7 +471,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>51</span>
-  <span> Mengagungkan Nikmat Allah SWT</span>
+  <span>Mengagungkan Nikmat Allah SWT</span>
   <span>9/18/2019</span>
   <span>00:22:15</span>
   <span>1.24Mb</span><br>
@@ -480,7 +480,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>52</span>
-  <span> Takutlah Pada Istidraj</span>
+  <span>Takutlah Pada Istidraj</span>
   <span>9/18/2019</span>
   <span>00:14:19</span>
   <span>0.79Mb</span><br>
@@ -489,7 +489,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>53</span>
-  <span> Pencari Ridho Allah SWT</span>
+  <span>Pencari Ridho Allah SWT</span>
   <span>9/18/2019</span>
   <span>00:25:28</span>
   <span>1.46Mb</span><br>
@@ -498,7 +498,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>54</span>
-  <span> Istiqomah dalam wirid</span>
+  <span>Istiqomah dalam wirid</span>
   <span>9/18/2019</span>
   <span>00:15:42</span>
   <span>0.83Mb</span><br>
@@ -507,7 +507,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>55</span>
-  <span> Ahli Ibadah dan Para Pecinta Allah SWT</span>
+  <span>Ahli Ibadah dan Para Pecinta Allah SWT</span>
   <span>9/18/2019</span>
   <span>00:25:44</span>
   <span>1.43Mb</span><br>
@@ -516,7 +516,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>56</span>
-  <span> Jangan Jadi Orang Sok Tahu</span>
+  <span>Jangan Jadi Orang Sok Tahu</span>
   <span>9/18/2019</span>
   <span>00:25:35</span>
   <span>1.40Mb</span><br>
@@ -525,7 +525,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>57</span>
-  <span> Manisnya Ibadah</span>
+  <span>Manisnya Ibadah</span>
   <span>9/18/2019</span>
   <span>00:18:15</span>
   <span>0.98Mb</span><br>
@@ -534,7 +534,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>58</span>
-  <span> Balasan Kepada Ahli Iman Di Akhirat</span>
+  <span>Balasan Kepada Ahli Iman Di Akhirat</span>
   <span>9/18/2019</span>
   <span>00:13:06</span>
   <span>0.71Mb</span><br>
@@ -543,7 +543,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>59</span>
-  <span> Hakekat Kebaikan Seorang Hamba</span>
+  <span>Hakekat Kebaikan Seorang Hamba</span>
   <span>9/18/2019</span>
   <span>00:12:04</span>
   <span>0.69Mb</span><br>
@@ -552,7 +552,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>60</span>
-  <span> Jalan Mengenal Allah</span>
+  <span>Jalan Mengenal Allah</span>
   <span>9/18/2019</span>
   <span>00:25:39</span>
   <span>1.47Mb</span><br>
@@ -561,7 +561,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>61</span>
-  <span> Takut Berbuat Maksiat Merupakan Hakikat Ilmu</span>
+  <span>Takut Berbuat Maksiat Merupakan Hakikat Ilmu</span>
   <span>9/18/2019</span>
   <span>00:41:15</span>
   <span>2.38Mb</span><br>
@@ -570,7 +570,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>62</span>
-  <span> Memperkuat Keyakinan Akan Kekuasaan Allah</span>
+  <span>Memperkuat Keyakinan Akan Kekuasaan Allah</span>
   <span>9/18/2019</span>
   <span>00:30:05</span>
   <span>1.67Mb</span><br>
@@ -579,7 +579,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>63</span>
-  <span> Jangan Berputus Asa dalam Bribadah</span>
+  <span>Jangan Berputus Asa dalam Bribadah</span>
   <span>9/18/2019</span>
   <span>00:28:03</span>
   <span>1.48Mb</span><br>
@@ -588,7 +588,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>64</span>
-  <span> Bebaskan Jiwamu dengan Mengenal Allah</span>
+  <span>Bebaskan Jiwamu dengan Mengenal Allah</span>
   <span>9/18/2019</span>
   <span>00:30:25</span>
   <span>1.68Mb</span><br>
@@ -597,7 +597,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>65</span>
-  <span> Hadirkan Allah Maka Semesta Bersamamu</span>
+  <span>Hadirkan Allah Maka Semesta Bersamamu</span>
   <span>9/18/2019</span>
   <span>00:36:19</span>
   <span>2.05Mb</span><br>
@@ -606,7 +606,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>66</span>
-  <span> Sifat Kemuliaan Yang di Karuniakan Oleh Allah</span>
+  <span>Sifat Kemuliaan Yang di Karuniakan Oleh Allah</span>
   <span>9/18/2019</span>
   <span>00:40:07</span>
   <span>2.29Mb</span><br>
