--- a/data/KHB. Sirah Sahabat/index.html
+++ b/data/KHB. Sirah Sahabat/index.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
-<title>zaman.old</title>
+<title>Pengumpul Ilmu / KHB. Sirah Sahabat</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='../../css/basic.css' rel='stylesheet'/>
 <div class="nav">
-Last update: 9/19/2019, 4:18:11 PM<br>
+Last update: 10/1/2019, 5:28:33 PM<br>
 <a href="../../faq.html">Situs apa ini?</a>
 <br><br>
 <a href="../../">Home</a> / KHB. Sirah Sahabat</div>
@@ -14,14 +14,14 @@ Last update: 9/19/2019, 4:18:11 PM<br>
   <span>Source: KHB Youtube Channel</span>
   <span>Total duration: 96.98 hours (47 items)</span>
   <span>Total size: 332.10Mb</span>
-  <span>Filetype: Audio/opus 8k</span>
+  <span>Filetype: Audio/opus 8kb/s</span>
   <span class="dl-all"><a href="https://www.youtube.com/playlist?list=PLlK0gGuioshBxyBg4TzEtKETkzOfv4mvB" target="blank">Source</a></span>
   <span class="dl-all"><a href="https://drive.google.com/drive/folders/1YhSQsm59PWPd6u9_mupZmfuy0RlsLxai" target="blank">Download All</a></span>
 </div>
 <div class="list">
 <li>
   <span>1</span>
-  <span> Abu Bakar RA 1</span>
+  <span>Abu Bakar RA 1</span>
   <span>9/18/2019</span>
   <span>01:13:16</span>
   <span>4.19Mb</span><br>
@@ -30,7 +30,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>2</span>
-  <span> Abu Bakar RA 2</span>
+  <span>Abu Bakar RA 2</span>
   <span>9/18/2019</span>
   <span>01:13:24</span>
   <span>4.17Mb</span><br>
@@ -39,7 +39,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>3</span>
-  <span> Abu Bakar RA 3</span>
+  <span>Abu Bakar RA 3</span>
   <span>9/18/2019</span>
   <span>01:13:17</span>
   <span>4.18Mb</span><br>
@@ -48,7 +48,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>4</span>
-  <span> Umar bin Khattab RA 1</span>
+  <span>Umar bin Khattab RA 1</span>
   <span>9/18/2019</span>
   <span>00:57:22</span>
   <span>3.33Mb</span><br>
@@ -57,7 +57,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>5</span>
-  <span> Umar bin Khattab RA 2</span>
+  <span>Umar bin Khattab RA 2</span>
   <span>9/18/2019</span>
   <span>00:57:31</span>
   <span>3.36Mb</span><br>
@@ -66,7 +66,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>6</span>
-  <span> Umar bin Khattab RA 3</span>
+  <span>Umar bin Khattab RA 3</span>
   <span>9/18/2019</span>
   <span>00:57:27</span>
   <span>3.35Mb</span><br>
@@ -75,7 +75,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>7</span>
-  <span> Umar bin Khattab RA 4</span>
+  <span>Umar bin Khattab RA 4</span>
   <span>9/18/2019</span>
   <span>00:57:24</span>
   <span>3.33Mb</span><br>
@@ -84,7 +84,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>8</span>
-  <span> Utsman bin Affan RA</span>
+  <span>Utsman bin Affan RA</span>
   <span>9/18/2019</span>
   <span>03:23:24</span>
   <span>11.79Mb</span><br>
@@ -93,7 +93,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>9</span>
-  <span> Ali bin Abi Thalib RA 1</span>
+  <span>Ali bin Abi Thalib RA 1</span>
   <span>9/18/2019</span>
   <span>01:23:02</span>
   <span>4.76Mb</span><br>
@@ -102,7 +102,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>10</span>
-  <span> Ali bin Abi Thalib RA 2</span>
+  <span>Ali bin Abi Thalib RA 2</span>
   <span>9/18/2019</span>
   <span>01:23:03</span>
   <span>4.82Mb</span><br>
@@ -111,7 +111,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>11</span>
-  <span> Ali bin Abi Thalib RA 3</span>
+  <span>Ali bin Abi Thalib RA 3</span>
   <span>9/18/2019</span>
   <span>01:23:02</span>
   <span>4.73Mb</span><br>
@@ -120,7 +120,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>12</span>
-  <span> Thalhah bin Ubaidillah RA</span>
+  <span>Thalhah bin Ubaidillah RA</span>
   <span>9/18/2019</span>
   <span>02:26:18</span>
   <span>8.47Mb</span><br>
@@ -129,7 +129,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>13</span>
-  <span> Zubair Bin Awwam RA</span>
+  <span>Zubair Bin Awwam RA</span>
   <span>9/18/2019</span>
   <span>02:43:02</span>
   <span>9.35Mb</span><br>
@@ -138,7 +138,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>14</span>
-  <span> Abdurrahman bin Auf RA</span>
+  <span>Abdurrahman bin Auf RA</span>
   <span>9/18/2019</span>
   <span>03:09:22</span>
   <span>10.94Mb</span><br>
@@ -147,7 +147,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>15</span>
-  <span> Saad bin Abi Waqqash RA</span>
+  <span>Saad bin Abi Waqqash RA</span>
   <span>9/18/2019</span>
   <span>03:39:33</span>
   <span>12.22Mb</span><br>
@@ -156,7 +156,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>16</span>
-  <span> Said bin Zaid RA</span>
+  <span>Said bin Zaid RA</span>
   <span>9/18/2019</span>
   <span>02:07:03</span>
   <span>7.34Mb</span><br>
@@ -165,7 +165,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>17</span>
-  <span> Abu Ubaidah bin Jarrah RA</span>
+  <span>Abu Ubaidah bin Jarrah RA</span>
   <span>9/18/2019</span>
   <span>03:23:53</span>
   <span>11.66Mb</span><br>
@@ -174,7 +174,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>18</span>
-  <span> Shuhaib Ar-Rumi RA</span>
+  <span>Shuhaib Ar-Rumi RA</span>
   <span>9/18/2019</span>
   <span>02:21:23</span>
   <span>8.10Mb</span><br>
@@ -183,7 +183,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>19</span>
-  <span> Abi Khudzaifah RA</span>
+  <span>Abi Khudzaifah RA</span>
   <span>9/18/2019</span>
   <span>01:50:00</span>
   <span>6.27Mb</span><br>
@@ -192,7 +192,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>20</span>
-  <span> Mushab bin Umair RA</span>
+  <span>Mushab bin Umair RA</span>
   <span>9/18/2019</span>
   <span>01:53:41</span>
   <span>6.51Mb</span><br>
@@ -201,7 +201,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>21</span>
-  <span> Zaid bin Tsabit RA</span>
+  <span>Zaid bin Tsabit RA</span>
   <span>9/18/2019</span>
   <span>02:19:43</span>
   <span>8.06Mb</span><br>
@@ -210,7 +210,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>22</span>
-  <span> Khabab bin Al-Arat RA</span>
+  <span>Khabab bin Al-Arat RA</span>
   <span>9/18/2019</span>
   <span>02:39:09</span>
   <span>9.25Mb</span><br>
@@ -219,7 +219,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>23</span>
-  <span> Saad bin Muadz RA</span>
+  <span>Saad bin Muadz RA</span>
   <span>9/18/2019</span>
   <span>01:52:50</span>
   <span>6.54Mb</span><br>
@@ -228,7 +228,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>24</span>
-  <span> Umair bin Saad RA</span>
+  <span>Umair bin Saad RA</span>
   <span>9/18/2019</span>
   <span>01:46:07</span>
   <span>6.23Mb</span><br>
@@ -237,7 +237,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>25</span>
-  <span> Tsabit bin Qais RA</span>
+  <span>Tsabit bin Qais RA</span>
   <span>9/18/2019</span>
   <span>02:10:24</span>
   <span>7.47Mb</span><br>
@@ -246,7 +246,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>26</span>
-  <span> Abu Thalhah Al-Anshari RA</span>
+  <span>Abu Thalhah Al-Anshari RA</span>
   <span>9/18/2019</span>
   <span>02:05:10</span>
   <span>7.06Mb</span><br>
@@ -255,7 +255,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>27</span>
-  <span> Bilal bin Rabah RA</span>
+  <span>Bilal bin Rabah RA</span>
   <span>9/18/2019</span>
   <span>02:23:51</span>
   <span>8.19Mb</span><br>
@@ -264,7 +264,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>28</span>
-  <span> Ikrimah bin Abi Jahal RA</span>
+  <span>Ikrimah bin Abi Jahal RA</span>
   <span>9/18/2019</span>
   <span>01:25:17</span>
   <span>4.73Mb</span><br>
@@ -273,7 +273,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>29</span>
-  <span> Hamzah Bin Abdil Muthalib RA</span>
+  <span>Hamzah Bin Abdil Muthalib RA</span>
   <span>9/18/2019</span>
   <span>01:52:22</span>
   <span>6.52Mb</span><br>
@@ -282,7 +282,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>30</span>
-  <span> Umair bin Wahb RA</span>
+  <span>Umair bin Wahb RA</span>
   <span>9/18/2019</span>
   <span>01:24:38</span>
   <span>4.53Mb</span><br>
@@ -291,7 +291,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>31</span>
-  <span> Hudzaifah bin Al-Yaman RA</span>
+  <span>Hudzaifah bin Al-Yaman RA</span>
   <span>9/18/2019</span>
   <span>01:55:18</span>
   <span>6.59Mb</span><br>
@@ -300,7 +300,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>32</span>
-  <span> Ammar bin Yasir RA</span>
+  <span>Ammar bin Yasir RA</span>
   <span>9/18/2019</span>
   <span>01:46:17</span>
   <span>6.07Mb</span><br>
@@ -309,7 +309,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>33</span>
-  <span> Ukkasyah bin Mihshan RA</span>
+  <span>Ukkasyah bin Mihshan RA</span>
   <span>9/18/2019</span>
   <span>02:00:48</span>
   <span>6.81Mb</span><br>
@@ -318,7 +318,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>34</span>
-  <span> Jafar bin Abi Thalib RA</span>
+  <span>Jafar bin Abi Thalib RA</span>
   <span>9/18/2019</span>
   <span>02:26:08</span>
   <span>8.01Mb</span><br>
@@ -327,7 +327,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>35</span>
-  <span> Jabir bin Abdillah RA</span>
+  <span>Jabir bin Abdillah RA</span>
   <span>9/18/2019</span>
   <span>02:05:45</span>
   <span>6.88Mb</span><br>
@@ -336,7 +336,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>36</span>
-  <span> Amr bin Al-Jamuh RA</span>
+  <span>Amr bin Al-Jamuh RA</span>
   <span>9/18/2019</span>
   <span>02:23:12</span>
   <span>7.92Mb</span><br>
@@ -345,7 +345,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>37</span>
-  <span> Saad bin Ar-Rabi RA</span>
+  <span>Saad bin Ar-Rabi RA</span>
   <span>9/18/2019</span>
   <span>01:58:38</span>
   <span>6.65Mb</span><br>
@@ -354,7 +354,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>38</span>
-  <span> Haritsah bin An-Numan RA</span>
+  <span>Haritsah bin An-Numan RA</span>
   <span>9/18/2019</span>
   <span>02:23:34</span>
   <span>8.06Mb</span><br>
@@ -363,7 +363,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>39</span>
-  <span> Muawiyah bin Abi Sufyan RA</span>
+  <span>Muawiyah bin Abi Sufyan RA</span>
   <span>9/18/2019</span>
   <span>02:04:18</span>
   <span>6.96Mb</span><br>
@@ -372,7 +372,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>40</span>
-  <span> Abdullah bin Amr bin Haram RA</span>
+  <span>Abdullah bin Amr bin Haram RA</span>
   <span>9/18/2019</span>
   <span>02:28:59</span>
   <span>8.39Mb</span><br>
@@ -381,7 +381,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>41</span>
-  <span> Abdullah bin Sallam RA</span>
+  <span>Abdullah bin Sallam RA</span>
   <span>9/18/2019</span>
   <span>02:29:53</span>
   <span>8.54Mb</span><br>
@@ -390,7 +390,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>42</span>
-  <span> Utbah bin Ghazwan RA</span>
+  <span>Utbah bin Ghazwan RA</span>
   <span>9/18/2019</span>
   <span>02:08:43</span>
   <span>7.37Mb</span><br>
@@ -399,7 +399,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>43</span>
-  <span> Salman Al-Farisi RA</span>
+  <span>Salman Al-Farisi RA</span>
   <span>9/18/2019</span>
   <span>02:30:43</span>
   <span>8.74Mb</span><br>
@@ -408,7 +408,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>44</span>
-  <span> Tsumamah bin Utsal RA</span>
+  <span>Tsumamah bin Utsal RA</span>
   <span>9/18/2019</span>
   <span>02:08:26</span>
   <span>7.37Mb</span><br>
@@ -417,7 +417,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>45</span>
-  <span> Abdullah bin Rawahah RA</span>
+  <span>Abdullah bin Rawahah RA</span>
   <span>9/18/2019</span>
   <span>02:49:19</span>
   <span>9.94Mb</span><br>
@@ -426,7 +426,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>46</span>
-  <span> Abu Dujanah RA</span>
+  <span>Abu Dujanah RA</span>
   <span>9/18/2019</span>
   <span>02:20:03</span>
   <span>8.11Mb</span><br>
@@ -435,7 +435,7 @@ Last update: 9/19/2019, 4:18:11 PM<br>
 </li>
 <li>
   <span>47</span>
-  <span> Ubadah bin Shamit RA</span>
+  <span>Ubadah bin Shamit RA</span>
   <span>9/18/2019</span>
   <span>02:22:44</span>
   <span>8.24Mb</span><br>
