--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 
 <!DOCTYPE html>
-<title>Help - zaman.old</title>
+<title>Pengumpul Ilmu</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='css/basic.css' rel='stylesheet'/>
 
 <div class="nav">
-Last update: 9/19/2019, 5:02:00 PM<br>
+Last update: 10/1/2019, 5:22:19 PM<br>
 <a href="faq.html">Situs apa ini?</a><br><br>
 <div class="list">
 <li>
   <span>1</span>
-  <span><a href="data/BYH. Al-Hikam/">BYH. Al-Hikam</a></span>
-  <span>2019/09/19 / 27:16:48 95.95Mb</span>
+  <span><a href="data/ALG. Ihya Ulumuddin/">ALG. Ihya Ulumuddin</a></span>
+  <span>27:16:48 / 95.95Mb - 387 items</span>
 </li>
 <li>
   <span>2</span>
-  <span><a href="data/KHB. Sirah Nabawiyah/">KHB. Sirah Nabawiyah</a></span>
-  <span>2019/09/19 / 56:02:24 201.01Mb</span>
+  <span><a href="data/BYH. Al-Hikam/">BYH. Al-Hikam</a></span>
+  <span>27:16:48 / 95.95Mb - 66 items</span>
 </li>
 <li>
   <span>3</span>
+  <span><a href="data/KHB. Sirah Nabawiyah/">KHB. Sirah Nabawiyah</a></span>
+  <span>56:02:24 / 201.01Mb - 28 items</span>
+</li>
+<li>
+  <span>4</span>
   <span><a href="data/KHB. Sirah Sahabat/">KHB. Sirah Sahabat</a></span>
-  <span>2019/09/19 / 96:58:48 348.23Mb</span>
+  <span>96:58:48 / 348.23Mb - 47 items</span>
 </li></div>
