--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <div class="nav">
 Last update: 10/1/2019, 5:22:19 PM<br>
+> git.io/pengumpul.ilmu<br><br>
 <a href="faq.html">Situs apa ini?</a><br><br>
 <div class="list">
 <li>
