--- a/data/BYH. Al-Hikam/index.html
+++ b/data/BYH. Al-Hikam/index.html
@@ -3,6 +3,11 @@
 <title>Pengumpul Ilmu / BYH. Al-Hikam</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='../../css/basic.css' rel='stylesheet'/>
+<link href='../../css/player.css' rel='stylesheet'/>
+<link href='../../css/icons.css' rel='stylesheet'/>
+
+<div id='PLAYER'></div>
+
 <div class="nav">
 Last update: 10/1/2019, 5:28:33 PM<br>
 <a href="../../faq.html">Situs apa ini?</a>
@@ -613,3 +618,8 @@ Last update: 10/1/2019, 5:28:33 PM<br>
   <span><a href="https://drive.google.com/uc?id=13PciHP-gWAar97wsoI6Jfy7e3tm4nUdU&export=download" target="blank">Download</a></span>
   <span><a href="https://drive.google.com/uc?id=13PciHP-gWAar97wsoI6Jfy7e3tm4nUdU" target="blank">Play Now</a></span>
 </li></div>
+
+
+<script src='../../script/utils.js'></script>
+<script src='../../script/player.js'></script>
+<script> PLAYER.init();</script>
