--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <title>Pengumpul Ilmu</title>
 <meta content='width=device-width,initial-scale=1,shrink-to-fit=no' name='viewport'/>
 <link href='css/basic.css' rel='stylesheet'/>
+<link href='css/player.css' rel='stylesheet'/>
+<link href='css/icons.css' rel='stylesheet'/>
 
+<div id='PLAYER'></div>
 <div class="nav">
 Last update: 10/1/2019, 5:22:19 PM<br>
-> git.io/pengumpul.ilmu<br><br>
-<a href="faq.html">Situs apa ini?</a><br><br>
+> git.io/index.kajian<br>
+> <a href="faq.html">help</a><br>
+<br><br>
 <div class="list">
 <li>
   <span>1</span>
@@ -28,4 +32,10 @@ Last update: 10/1/2019, 5:22:19 PM<br>
   <span>4</span>
   <span><a href="data/KHB. Sirah Sahabat/">KHB. Sirah Sahabat</a></span>
   <span>96:58:48 / 348.23Mb - 47 items</span>
-</li></div>
+</li>
+</div>
+
+
+<script src='script/utils/utils.js'></script>
+<script src='script/player.js'></script>
+<script> PLAYER.init();</script>
